# normal_likelihood_method

./: CMakeLists.txt  input.txt  main  main.cpp  output.txt  run.sh
ui/: main_window.cpp  main_window.h
utils/: censoring_data.cpp  censoring_data.h  data_generator.cpp  data_generator.h  data_loader.cpp  data_loader.h  data_params_calculator.cpp  data_params_calculator.h  log_normal_system_solver.cpp  log_normal_system_solver.h  plot_viewer.cpp  plot_viewer.h  results_saver.cpp  results_saver.h
